gqlp/graphql_parser.go
// Code generated from GraphQL.g4 by ANTLR 4.7.1. DO NOT EDIT.

package gqlp // GraphQL
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'type'", "'on'", "'fragment'", "'extend'", "'implements'", "'schema'",
	"'enum'", "'union'", "'interface'", "'input'", "'scalar'", "'directive'",
	"'query'", "'mutation'", "'subscription'", "'by'", "'{'", "'}'", "'('",
	"')'", "':'", "'...'", "'true'", "'false'", "'null'", "'['", "']'", "'$'",
	"'!'", "'@'", "'&'", "'='", "'|'", "", "", "", "", "", "", "','", "", "'-'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "WS", "Ignored",
	"UnicodeBOM", "WhiteSpace", "LineTerminator", "Comment", "Comma", "IntegerPart",
	"NegativeSign", "FractionalPart", "ExponentPart", "StringConst", "DirectiveLocation",
	"ExecutableDirectiveLocation", "TypeSystemDirectiveLocation", "NAME",
}

var ruleNames = []string{
	"graphql", "name", "document", "definition", "executableDefinition", "operationDefinition",
	"operationType", "selectionSet", "selection", "field", "arguments", "argument",
	"alias", "fragmentSpread", "fragmentDefinition", "fragmentName", "typeCondition",
	"inlineFragment", "value", "intValue", "floatValue", "booleanValue", "stringValue",
	"nullValue", "enumValue", "listValue", "objectValue", "objectField", "variable",
	"variableDefinitions", "variableDefinition", "defaultValue", "typeSpec",
	"namedType", "listType", "nonNullType", "directives", "directive", "typeSystemDefinition",
	"schemaDefinition", "operationTypeDefinition", "description", "typeDefinition",
	"typeExtension", "scalarTypeDefinition", "scalarTypeExtension", "objectTypeDefinition",
	"objectTypeExtension", "implementsInterfaces", "fieldsDefinition", "fieldDefinition",
	"argumentsDefinition", "inputValueDefinition", "interfaceTypeDefinition",
	"interfaceTypeExtension", "unionTypeDefinition", "unionMemberTypes", "unionTypeExtension",
	"enumTypeDefinition", "enumValuesDefinition", "enumValueDefinition", "enumTypeExtension",
	"inputObjectTypeDefinition", "inputFieldsDefinition", "inputObjectTypeExtension",
	"directiveDefinition", "directiveLocations",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type GraphQLParser struct {
	*antlr.BaseParser
}

func NewGraphQLParser(input antlr.TokenStream) *GraphQLParser {
	this := new(GraphQLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "GraphQL.g4"

	return this
}

// GraphQLParser tokens.
const (
	GraphQLParserEOF                         = antlr.TokenEOF
	GraphQLParserT__0                        = 1
	GraphQLParserT__1                        = 2
	GraphQLParserT__2                        = 3
	GraphQLParserT__3                        = 4
	GraphQLParserT__4                        = 5
	GraphQLParserT__5                        = 6
	GraphQLParserT__6                        = 7
	GraphQLParserT__7                        = 8
	GraphQLParserT__8                        = 9
	GraphQLParserT__9                        = 10
	GraphQLParserT__10                       = 11
	GraphQLParserT__11                       = 12
	GraphQLParserT__12                       = 13
	GraphQLParserT__13                       = 14
	GraphQLParserT__14                       = 15
	GraphQLParserT__15                       = 16
	GraphQLParserT__16                       = 17
	GraphQLParserT__17                       = 18
	GraphQLParserT__18                       = 19
	GraphQLParserT__19                       = 20
	GraphQLParserT__20                       = 21
	GraphQLParserT__21                       = 22
	GraphQLParserT__22                       = 23
	GraphQLParserT__23                       = 24
	GraphQLParserT__24                       = 25
	GraphQLParserT__25                       = 26
	GraphQLParserT__26                       = 27
	GraphQLParserT__27                       = 28
	GraphQLParserT__28                       = 29
	GraphQLParserT__29                       = 30
	GraphQLParserT__30                       = 31
	GraphQLParserT__31                       = 32
	GraphQLParserT__32                       = 33
	GraphQLParserWS                          = 34
	GraphQLParserIgnored                     = 35
	GraphQLParserUnicodeBOM                  = 36
	GraphQLParserWhiteSpace                  = 37
	GraphQLParserLineTerminator              = 38
	GraphQLParserComment                     = 39
	GraphQLParserComma                       = 40
	GraphQLParserIntegerPart                 = 41
	GraphQLParserNegativeSign                = 42
	GraphQLParserFractionalPart              = 43
	GraphQLParserExponentPart                = 44
	GraphQLParserStringConst                 = 45
	GraphQLParserDirectiveLocation           = 46
	GraphQLParserExecutableDirectiveLocation = 47
	GraphQLParserTypeSystemDirectiveLocation = 48
	GraphQLParserNAME                        = 49
)

// GraphQLParser rules.
const (
	GraphQLParserRULE_graphql                   = 0
	GraphQLParserRULE_name                      = 1
	GraphQLParserRULE_document                  = 2
	GraphQLParserRULE_definition                = 3
	GraphQLParserRULE_executableDefinition      = 4
	GraphQLParserRULE_operationDefinition       = 5
	GraphQLParserRULE_operationType             = 6
	GraphQLParserRULE_selectionSet              = 7
	GraphQLParserRULE_selection                 = 8
	GraphQLParserRULE_field                     = 9
	GraphQLParserRULE_arguments                 = 10
	GraphQLParserRULE_argument                  = 11
	GraphQLParserRULE_alias                     = 12
	GraphQLParserRULE_fragmentSpread            = 13
	GraphQLParserRULE_fragmentDefinition        = 14
	GraphQLParserRULE_fragmentName              = 15
	GraphQLParserRULE_typeCondition             = 16
	GraphQLParserRULE_inlineFragment            = 17
	GraphQLParserRULE_value                     = 18
	GraphQLParserRULE_intValue                  = 19
	GraphQLParserRULE_floatValue                = 20
	GraphQLParserRULE_booleanValue              = 21
	GraphQLParserRULE_stringValue               = 22
	GraphQLParserRULE_nullValue                 = 23
	GraphQLParserRULE_enumValue                 = 24
	GraphQLParserRULE_listValue                 = 25
	GraphQLParserRULE_objectValue               = 26
	GraphQLParserRULE_objectField               = 27
	GraphQLParserRULE_variable                  = 28
	GraphQLParserRULE_variableDefinitions       = 29
	GraphQLParserRULE_variableDefinition        = 30
	GraphQLParserRULE_defaultValue              = 31
	GraphQLParserRULE_typeSpec                  = 32
	GraphQLParserRULE_namedType                 = 33
	GraphQLParserRULE_listType                  = 34
	GraphQLParserRULE_nonNullType               = 35
	GraphQLParserRULE_directives                = 36
	GraphQLParserRULE_directive                 = 37
	GraphQLParserRULE_typeSystemDefinition      = 38
	GraphQLParserRULE_schemaDefinition          = 39
	GraphQLParserRULE_operationTypeDefinition   = 40
	GraphQLParserRULE_description               = 41
	GraphQLParserRULE_typeDefinition            = 42
	GraphQLParserRULE_typeExtension             = 43
	GraphQLParserRULE_scalarTypeDefinition      = 44
	GraphQLParserRULE_scalarTypeExtension       = 45
	GraphQLParserRULE_objectTypeDefinition      = 46
	GraphQLParserRULE_objectTypeExtension       = 47
	GraphQLParserRULE_implementsInterfaces      = 48
	GraphQLParserRULE_fieldsDefinition          = 49
	GraphQLParserRULE_fieldDefinition           = 50
	GraphQLParserRULE_argumentsDefinition       = 51
	GraphQLParserRULE_inputValueDefinition      = 52
	GraphQLParserRULE_interfaceTypeDefinition   = 53
	GraphQLParserRULE_interfaceTypeExtension    = 54
	GraphQLParserRULE_unionTypeDefinition       = 55
	GraphQLParserRULE_unionMemberTypes          = 56
	GraphQLParserRULE_unionTypeExtension        = 57
	GraphQLParserRULE_enumTypeDefinition        = 58
	GraphQLParserRULE_enumValuesDefinition      = 59
	GraphQLParserRULE_enumValueDefinition       = 60
	GraphQLParserRULE_enumTypeExtension         = 61
	GraphQLParserRULE_inputObjectTypeDefinition = 62
	GraphQLParserRULE_inputFieldsDefinition     = 63
	GraphQLParserRULE_inputObjectTypeExtension  = 64
	GraphQLParserRULE_directiveDefinition       = 65
	GraphQLParserRULE_directiveLocations        = 66
)

// IGraphqlContext is an interface to support dynamic dispatch.
type IGraphqlContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGraphqlContext differentiates from other interfaces.
	IsGraphqlContext()
}

type GraphqlContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGraphqlContext() *GraphqlContext {
	var p = new(GraphqlContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_graphql
	return p
}

func (*GraphqlContext) IsGraphqlContext() {}

func NewGraphqlContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GraphqlContext {
	var p = new(GraphqlContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_graphql

	return p
}

func (s *GraphqlContext) GetParser() antlr.Parser { return s.parser }

func (s *GraphqlContext) Document() IDocumentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDocumentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDocumentContext)
}

func (s *GraphqlContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GraphqlContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GraphqlContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterGraphql(s)
	}
}

func (s *GraphqlContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitGraphql(s)
	}
}

func (s *GraphqlContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraphQLVisitor:
		return t.VisitGraphql(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraphQLParser) Graphql() (localctx IGraphqlContext) {
	localctx = NewGraphqlContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GraphQLParserRULE_graphql)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(134)
		p.Document()
	}

	return localctx
}

// INameContext is an interface to support dynamic dispatch.
type INameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNameContext differentiates from other interfaces.
	IsNameContext()
}

type NameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNameContext() *NameContext {
	var p = new(NameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_name
	return p
}

func (*NameContext) IsNameContext() {}

func NewNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NameContext {
	var p = new(NameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_name

	return p
}

func (s *NameContext) GetParser() antlr.Parser { return s.parser }

func (s *NameContext) NAME() antlr.TerminalNode {
	return s.GetToken(GraphQLParserNAME, 0)
}

func (s *NameContext) DirectiveLocation() antlr.TerminalNode {
	return s.GetToken(GraphQLParserDirectiveLocation, 0)
}

func (s *NameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterName(s)
	}
}

func (s *NameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitName(s)
	}
}

func (s *NameContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraphQLVisitor:
		return t.VisitName(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraphQLParser) Name() (localctx INameContext) {
	localctx = NewNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GraphQLParserRULE_name)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(136)
		_la = p.GetTokenStream().LA(1)

		if !((((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<GraphQLParserT__0)|(1<<GraphQLParserT__1)|(1<<GraphQLParserT__2)|(1<<GraphQLParserT__3)|(1<<GraphQLParserT__4)|(1<<GraphQLParserT__5)|(1<<GraphQLParserT__6)|(1<<GraphQLParserT__7)|(1<<GraphQLParserT__8)|(1<<GraphQLParserT__9)|(1<<GraphQLParserT__10)|(1<<GraphQLParserT__11)|(1<<GraphQLParserT__12)|(1<<GraphQLParserT__13)|(1<<GraphQLParserT__14)|(1<<GraphQLParserT__15))) != 0) || _la == GraphQLParserDirectiveLocation || _la == GraphQLParserNAME) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	var p = new(DocumentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_document
	return p
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	var p = new(DocumentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) EOF() antlr.TerminalNode {
	return s.GetToken(GraphQLParserEOF, 0)
}

func (s *DocumentContext) AllDefinition() []IDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDefinitionContext)(nil)).Elem())
	var tst = make([]IDefinitionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDefinitionContext)
		}
	}

	return tst
}

func (s *DocumentContext) Definition(i int) IDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefinitionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDefinitionContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (s *DocumentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraphQLVisitor:
		return t.VisitDocument(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraphQLParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GraphQLParserRULE_document)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(139)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<GraphQLParserT__0)|(1<<GraphQLParserT__2)|(1<<GraphQLParserT__3)|(1<<GraphQLParserT__5)|(1<<GraphQLParserT__6)|(1<<GraphQLParserT__7)|(1<<GraphQLParserT__8)|(1<<GraphQLParserT__9)|(1<<GraphQLParserT__10)|(1<<GraphQLParserT__11)|(1<<GraphQLParserT__12)|(1<<GraphQLParserT__13)|(1<<GraphQLParserT__14)|(1<<GraphQLParserT__16))) != 0) || _la == GraphQLParserStringConst {
		{
			p.SetState(138)
			p.Definition()
		}

		p.SetState(141)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(143)
		p.Match(GraphQLParserEOF)
	}

	return localctx
}

// IDefinitionContext is an interface to support dynamic dispatch.
type IDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionContext differentiates from other interfaces.
	IsDefinitionContext()
}

type DefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionContext() *DefinitionContext {
	var p = new(DefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_definition
	return p
}

func (*DefinitionContext) IsDefinitionContext() {}

func NewDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionContext {
	var p = new(DefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_definition

	return p
}

func (s *DefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionContext) ExecutableDefinition() IExecutableDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExecutableDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExecutableDefinitionContext)
}

func (s *DefinitionContext) TypeSystemDefinition() ITypeSystemDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeSystemDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeSystemDefinitionContext)
}

func (s *DefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterDefinition(s)
	}
}

func (s *DefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitDefinition(s)
	}
}

func (s *DefinitionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraphQLVisitor:
		return t.VisitDefinition(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraphQLParser) Definition() (localctx IDefinitionContext) {
	localctx = NewDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GraphQLParserRULE_definition)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(147)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case GraphQLParserT__2, GraphQLParserT__12, GraphQLParserT__13, GraphQLParserT__14, GraphQLParserT__16:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(145)
			p.ExecutableDefinition()
		}

	case GraphQLParserT__0, GraphQLParserT__3, GraphQLParserT__5, GraphQLParserT__6, GraphQLParserT__7, GraphQLParserT__8, GraphQLParserT__9, GraphQLParserT__10, GraphQLParserT__11, GraphQLParserStringConst:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(146)
			p.TypeSystemDefinition()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}
